v2.1
ahora puedes escoger ciertos sonidos habilitados desde la configuración del programa.
VeTube ya no permite tener 2 instancias del mismo abiertas.
ahora puedes habilitar y desabilitar las  categorías desde la configuración del programa
se corrige el bug de que se añadiera un enlace a favoritos el número de favoritos que tuvieras.
si cambias a las diversas categorías el modo automático solo leerá los mensajes de dicha categoría.
se agrega un atajo de teclado para destacar un mensaje, el mismo se irá a la categoría  de favoritos (se creará si no la tienes): alt shift f
se añaden categorías por mensajes, estas son: miembros, donativos, moderadores, usuarios verificados, y favoritos.
se corrige el no poder iniciar el chat automáticamente si no se consigue el título o las views de un envivo.
v2.0
se agrega twitch a la lista de streams soportados.
se corrige un bug el cual podía hacer que el programa se cerraba si es que tenías sapy o lector leyendo el chat.
se agrega una sección de favoritos, podrás guardar algún envivo que te  guste para poder repetir el chat cuantas veces gustes.
se agrega portugués a los  idiomas traducidos, gracias eternal legend
se aregla el cargar los idiomas correctamente.
V1.2.1
(programadores): se quita webbrowser para reemplazarlo por funciones nativas de wx-python. gracias hector
se agrega el idioma inglés en el catálogo de idiomas soportados.
se agrega la opción que permite leer tus mensajes con voz sapy o con tu lector de pantalla en automático. gracias a sus sugerencias
se modifica una opción. ahora alt shift mas m activa o desactiva respectivamente la lectura de mensajes automáticamente. así mismo en ajustes se puede encontrar la casilla con el mismo nombre.
se optimiza la optensión de datos tanto del título como de las reproducciones en el enlace pegado. gracias Hector.
si cerrabas y abrías otro directo se abría otro hilo de la interfaz invisible dificultando la lectura del chat. esto ya no debería pasar
V1.2